--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,5 @@
-.App {
-  text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -40,11 +10,6 @@ body {
 
 .card2 {
   margin: 0px 40px
-}
-
-.image {
-  width: 360px;
-  height: 280px
 }
 
 .border-line {
@@ -135,7 +100,7 @@ textarea:focus {
   -moz-box-shadow: none !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
-  border: 1px solid #304FFE;
+  border: 1px solid #bc1b2b;
   outline-width: 0
 }
 
@@ -166,7 +131,7 @@ button:focus {
 
 a {
   color: inherit;
-  cursor: pointer
+  cursor: pointer;
 }
 
 .btn-red {
@@ -188,12 +153,6 @@ a {
 }
 
 @media screen and (max-width: 991px) {
-
-  .image {
-      width: 300px;
-      height: 220px
-  }
-
   .border-line {
       border-right: none
   }
